exports[`test <HeaderTab /> (current tab) renders correctly 1`] = `
<li>
  <button
    className="tabCurrent"
    onClick={[Function]}>
    Видео
  </button>
</li>
`;

exports[`test <HeaderTab /> (not current tab) renders correctly 1`] = `
<li>
  <button
    className="tab"
    onClick={[Function]}>
    Видео
  </button>
</li>
`;
